test/sema/typeck/pattern/rest-too-many-params.dora
fn f(x: (Int64, Int64)) {
    let (a, b, c, ..) = x;
}
